tests/baselines/reference/protectedStaticNotAccessibleInClodule.errors.txt
protectedStaticNotAccessibleInClodule.ts(8,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
protectedStaticNotAccessibleInClodule.ts(10,22): error TS2445: Property 'bar' is protected and only accessible within class 'C' and its subclasses.


==== protectedStaticNotAccessibleInClodule.ts (2 errors) ====
    // Any attempt to access a private property member outside the class body that contains its declaration results in a compile-time error.
    
    class C {
        public static foo: string;
        protected static bar: string;
    }
    
    module C {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export var f = C.foo; // OK
        export var b = C.bar; // error
                         ~~~
!!! error TS2445: Property 'bar' is protected and only accessible within class 'C' and its subclasses.
    }